--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 
 [build-dependencies]
-cmake = "0.1.49"
+cc = { version = "1.0", features = ["parallel"] }
 
 [dev-dependencies]
 egui = "0.21.0"
