--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-[build-dependencies]
-cc = { version = "1.0", features = ["parallel"] }
+serde = { version = "1.0", features = ["derive"] }
+phf = { version = "0.11",   features = ["macros"] }
+num-traits = "0.2"
 
 [dev-dependencies]
 egui = "0.21.0"
